; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/w1/extr_w1.c_w1_slave_found.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/w1/extr_w1.c_w1_slave_found.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.w1_master = type { i32 }
%struct.w1_slave = type { i32 }
%struct.w1_reg_num = type { i64 }

@W1_SLAVE_ACTIVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.w1_master*, i64)* @w1_slave_found to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @w1_slave_found(%struct.w1_master* %0, i64 %1) #0 {
  %3 = alloca %struct.w1_master*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.w1_slave*, align 8
  %6 = alloca %struct.w1_reg_num*, align 8
  %7 = alloca i64, align 8
  store %struct.w1_master* %0, %struct.w1_master** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = load i64, i64* %4, align 8
  %9 = call i64 @cpu_to_le64(i64 %8)
  store i64 %9, i64* %7, align 8
  %10 = load %struct.w1_master*, %struct.w1_master** %3, align 8
  %11 = getelementptr inbounds %struct.w1_master, %struct.w1_master* %10, i32 0, i32 0
  %12 = call i32 @atomic_inc(i32* %11)
  %13 = bitcast i64* %4 to %struct.w1_reg_num*
  store %struct.w1_reg_num* %13, %struct.w1_reg_num** %6, align 8
  %14 = load %struct.w1_master*, %struct.w1_master** %3, align 8
  %15 = load %struct.w1_reg_num*, %struct.w1_reg_num** %6, align 8
  %16 = call %struct.w1_slave* @w1_slave_search_device(%struct.w1_master* %14, %struct.w1_reg_num* %15)
  store %struct.w1_slave* %16, %struct.w1_slave** %5, align 8
  %17 = load %struct.w1_slave*, %struct.w1_slave** %5, align 8
  %18 = icmp ne %struct.w1_slave* %17, null
  br i1 %18, label %19, label %25

19:                                               ; preds = %2
  %20 = load i32, i32* @W1_SLAVE_ACTIVE, align 4
  %21 = load %struct.w1_slave*, %struct.w1_slave** %5, align 8
  %22 = getelementptr inbounds %struct.w1_slave, %struct.w1_slave* %21, i32 0, i32 0
  %23 = bitcast i32* %22 to i64*
  %24 = call i32 @set_bit(i32 %20, i64* %23)
  br label %40

25:                                               ; preds = %2
  %26 = load i64, i64* %4, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %39

28:                                               ; preds = %25
  %29 = load %struct.w1_reg_num*, %struct.w1_reg_num** %6, align 8
  %30 = getelementptr inbounds %struct.w1_reg_num, %struct.w1_reg_num* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = bitcast i64* %7 to i32*
  %33 = call i64 @w1_calc_crc8(i32* %32, i32 7)
  %34 = icmp eq i64 %31, %33
  br i1 %34, label %35, label %39

35:                                               ; preds = %28
  %36 = load %struct.w1_master*, %struct.w1_master** %3, align 8
  %37 = load %struct.w1_reg_num*, %struct.w1_reg_num** %6, align 8
  %38 = call i32 @w1_attach_slave_device(%struct.w1_master* %36, %struct.w1_reg_num* %37)
  br label %39

39:                                               ; preds = %35, %28, %25
  br label %40

40:                                               ; preds = %39, %19
  %41 = load %struct.w1_master*, %struct.w1_master** %3, align 8
  %42 = getelementptr inbounds %struct.w1_master, %struct.w1_master* %41, i32 0, i32 0
  %43 = call i32 @atomic_dec(i32* %42)
  ret void
}

declare dso_local i64 @cpu_to_le64(i64) #1

declare dso_local i32 @atomic_inc(i32*) #1

declare dso_local %struct.w1_slave* @w1_slave_search_device(%struct.w1_master*, %struct.w1_reg_num*) #1

declare dso_local i32 @set_bit(i32, i64*) #1

declare dso_local i64 @w1_calc_crc8(i32*, i32) #1

declare dso_local i32 @w1_attach_slave_device(%struct.w1_master*, %struct.w1_reg_num*) #1

declare dso_local i32 @atomic_dec(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
